--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                 </div>
                 <div class="col col-12 col-lg-9 pt-2 mt-2 ">
-                    <h3 class="montserrat-font d-flex justify-content-center justify-content-lg-start">I ❤️ Coding & web development</h3>
+                    <h2 class="montserrat-font d-flex justify-content-center justify-content-lg-start">I ❤️ web development</h2>
                     <p class="montserrat-font d-flex justify-content-center justify-content-lg-start">From designing interactive user interfaces to solving complex programming challenges, coding allows me to transform ideas into reality. I’m passionate about creating seamless web experiences that are both visually appealing and highly functional.</p>
 
                 </div>
@@ -149,8 +149,8 @@
 
                 </div>
                 <div class="col col-12 col-lg-9 pt-2 mt-2 ">
-                    <h2 class="montserrat-font d-flex justify-content-center justify-content-lg-start">Phone Number & Whatsapp</h2>
-                    <p class="montserrat-font d-flex justify-content-center justify-content-lg-start">+201124774090 | +201070081573</p>
+                    <h2 class="montserrat-font d-flex justify-content-center justify-content-lg-start">Phone Number</h2>
+                    <p class="montserrat-font d-flex justify-content-center justify-content-lg-start">+201124774090<br/>+201070081573</p>
 
                 </div>
 
@@ -163,7 +163,7 @@
                 </div>
                 <div class="col col-12 col-lg-9 pt-3 mt-3 ">
                     <h2 class="montserrat-font d-flex justify-content-center justify-content-lg-start">Email</h2>
-                    <p class="montserrat-font d-flex justify-content-center justify-content-lg-start">mohshehab99@gmail.com | mohamed.shehab@valeo.com</p>
+                    <p class="montserrat-font d-flex justify-content-center justify-content-lg-start">mohshehab99@gmail.com<br/>mohamed.shehab@valeo.com</p>
 
                 </div>
 
